themes/hello-friend-ng/assets/scss/_home.scss
.home {
  .main {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    max-width: $max-width;
    [data-theme=dark] & {
      color: #ffffff;
    }
    .left {
      text-align: left;
      @media #{$media-size-phone} {
        text-align: center;
      }
      .title {
        font-family: "Montserrat", sans-serif;
        h1,h2 {
          font-size: 97px;
          line-height: 1.1em;
          margin: 0px;
          display: block;
          @media #{$media-size-phone} {
            font-size: 40px;
          }
        }
        h1 {
          font-weight: 300;
        }
        h2 {
          font-weight: 700;
        }
      }
      .underline {
        width: 100px;
        height: 6px;
        margin: 15px 0px;
        [data-theme=dark] & {
          background: #ffffff;
        }
        [data-theme=light] & {
          background: #c5c5c5;
        }
        @media #{$media-size-phone} {
          margin: 15px auto;
        }
      }
      .subtitle {
        margin: 0px;
        font-size: 32px;
        font-weight: 200;
      }
    }
    .doge-container {
      width: 384px;
      height: 384px;
      overflow: hidden;
      border-radius: 50%;
      display: flex;
      justify-content: center;
      [data-theme=dark] & {
        background: #000000;
      }
      [data-theme=light] & {
        background: #dbdbdb;
      }
      @media #{$media-size-phone} {
        width: 200px;
        height: 200px;
      }
      img {
        max-width: 100%;
      }
    }
    @media #{$media-size-phone} {
      flex-direction: column-reverse;
    }
  }
}

